--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="row">
             <div class="col-12">
-                <input :keyup.enter="aggiungiElementoDellaSpesa" type="text" placeholder="Aggiungi qualcosa da comprare" v-model="elementoListaAggiunto">
+                <input @keyup.enter="aggiungiElementoDellaSpesa" type="text" placeholder="Aggiungi qualcosa da comprare" v-model="elementoListaAggiunto">
                 <button @click="aggiungiElementoDellaSpesa">Aggiungi alla lista!</button>
             </div>
         </div>
